@@ -599,15 +599,15 @@ static void Key_Message (int key)
 		return;
 	}
 
-	if (key < 32 || key > 127)
-		return;	// non printable
-
 	if (key == K_BACKSPACE)
 	{
 		if (chat_bufferlen)
 			chat_buffer[--chat_bufferlen] = 0;
 		return;
 	}
+
+	if (key < 32 || key > 127)
+		return; // non printable
 
 	if (chat_bufferlen == sizeof(chat_buffer) - 1)
 		return; // all full
