@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2013-04-02 (SVN):
+    * keys.c (Key_Message): move backspace handling before non-printable
+      check. (the functionality doesn't change. from tyrquake git repo.)
+
 2013-03-30 (SVN):
     * scripts/ax_pthread.m4: update from mainstream savannah git repo.
 
